--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,11 +1,30 @@
 
 
 .alert-box {
-    color:#555;
+
     border:1px solid #ededed;
-    font-family:Tahoma,Geneva,Arial,sans-serif;font-size:11px;
-    padding:10px 10px 10px 36px;
-	align-text: center;
+    font-family:OpenSans;font-size:16px;
+    
+	text-align: center;
+	vertical-align: middle;
+}
+
+.heading-box{
+    font-weight:bold;
+    text-transform:uppercase;
+	border-right:1px solid #ededed;
+	width : 25%;
+	float: left;
+	vertical-align: middle;
+	padding: 10% 0;
+}
+
+.tail-box{
+	text-align: left;
+	width : 70%;
+	float: right;
+	vertical-align: middle;
+	padding: 10% 0;
 }
 
 .alert-box span {
@@ -18,19 +37,6 @@
   justify-content: center;
   flex-direction: column;
   height: 100px;
-}
-
-.message {
-
-}
-.forum {
-
-}
-.gallery {
-
-}
-.file {
-
 }
 
 a { color: inherit; } 
